# AMF_ARI

./: .gitignore  Dockerfile  README.md  boot.sh  data.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: ari.py  docs.html  routes.py
app/templates/: docs.html
config/: config.json
scripts/: README.md  export_model.py  pyproject.toml
tests/api-requests/AMF ARI/: Mixed Nodes Preserved.bru  Single Proposition.bru  Window Size.bru  XAIF Full.bru  XAIF Two Propositions.bru  bruno.json
tests/api-requests/AMF ARI/environments/: (2) staging.bru  (3) production.bru
tests/api-requests/AMF ARI/test-inputs/: xaif_mixed_nodes.json  xaif_single_proposition.json  xaif_two_propositions.json
