[project]
name = "amf-ari"
version = "0.1.0"
description = "AMF Argument Relation Identification"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask==3.1.3",
    "gunicorn==25.1.0",
    "torch==2.7.1",
    "numpy==2.2.6",
    "transformers==4.57.6",
    "datasets==4.5.0",
    "requests==2.32.5",
    "xaif-eval==0.2.2",
    "optimum-intel==1.27.0",
    "openvino==2026.0.0",
    "nncf==3.0.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
