[project]
name = "amf-ari-export"
version = "0.1.0"
description = "Export script for AMF ARI OpenVINO model"
requires-python = ">=3.12"

dependencies = [
    "torch==2.5.1+cpu",
    "transformers==4.57.6",
    "optimum-intel==1.27.0",
    "openvino==2026.0.0",
    "nncf==3.0.0",
    "pillow==12.1.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
